# dancetime

./: .gitignore  CLAUDE.md  README.md  analyze_competition.py  common.py  competition_analysis.html  dancetime_cli.py  index.html  plot_elo.py  pyproject.toml  site.webmanifest  thor.md
.github/workflows/: test.yml  update.yml
cal/: __init__.py  server.py
cal/static/: calendar.html
data/: calendar.json  elo_history.json  elo_ratings.json  heats_1030.json  heats_1049.json  heats_373.json  heats_421.json  heats_422.json  heats_755.json  heats_904.json  index.json  ranking_1030.json  ranking_1049.json  ranking_373.json  ranking_421.json  ranking_422.json  ranking_755.json  ranking_904.json
heats/: __init__.py  matchups.py  parser.py  session_names.py  writer.py
publish/: __init__.py  validator.py
ranking/: ELO update.md  __init__.py  clusters.py  elo.py  elo_store.py  models.py  parser.py  skill_rating.py  writer.py
schedule/: __init__.py  active.py  calendar.py  phases.py  runner.py
scrape/: __init__.py  client.py  fetcher.py  zip_store.py
serve/: __init__.py
static/: index.html
tests/: conftest.py  create_fixture.py  test_calendar.py  test_calendar_filter.py  test_cli.py  test_heats.py  test_integration.py  test_phases.py  test_publish.py  test_ranking.py  test_ranking_real.py  test_runner.py  test_scrape.py
tests/spa/: conftest.py  test_heats_ladder.py  test_ranking.py
